--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preact/signals": "^1.2.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "autoprefixer": "^9.8.8",
+    "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "postcss": "^7.0.39",
+    "jquery": "^3.7.1",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "^3.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
